Use websockets instead of polling

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Arduino Control</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
     <!-- <script defer src="script.js"></script> -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
